Fixed vertical alignment

--- a/assets/shared/styles/forms.css
+++ b/assets/shared/styles/forms.css
@@ -50,7 +50,7 @@ fieldset .generated-field  {
 .form-input input[type=checkbox],
 .form-input input[type=radio] {
 	margin: .125rem .25rem;
-	vertical-align: inherit;
+	vertical-align: baseline;
 }
 .form-input input[type=checkbox] ~ label,
 .form-input inpt[type=radio] ~ label {
